# EFBot

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  EndaxisStageIcon.vue  README.md  Untitled-1.md  docker-compose.yml  天赋精英化等级.md  熔铸火焰.md
.claude/: settings.local.json
Archived_Report/: 2026-04-03_batch1_impl_physical_weakness_avywenna_dunwu.md  2026-04-03_batch1_implementation_audit.md  2026-04-03_dapan_endmin_pinpoint_audit.md  2026-04-03_dapan_gouqian_final_audit.md  2026-04-03_dapan_gouqian_implementation.md  2026-04-03_project_takeover_audit.md  2026-04-03_talent_registry_expansion_plan.md  2026-04-03_unclassified_effects_audit.md  2026-04-04_arclight_consume_conduction_audit.md  2026-04-04_arclight_consume_conduction_frontend_audit.md  2026-04-04_arclight_pinpoint_audit.md  2026-04-04_arclight_wilderness_wanderer_impl.md  2026-04-04_dapan_bugfix_report.md  2026-04-04_dapan_physical_anomaly_stacks_fix.md  2026-04-04_physical_anomaly_chain_audit.md  ABILITY_EXPANSION_MODE_REPORT.md  ABILITY_EXPANSION_OVERLAY_REPORT.md  ABILITY_EXPANSION_PANEL_REPORT.md  ALESH_LINK_FIX_REPORT.md  ALESH_LINK_VERIFICATION_REPORT.md  ANOMALY_DAMAGE_AUDIT_REPORT.md  ARCLIGHT_SKILL_ANALYSIS_REPORT.md  ARCLIGHT_SKILL_FIX_REPORT.md  ARCLIGHT_SKILL_TIMING_FIX_REPORT.md  AVYWENNA_SKILL_ANALYSIS_REPORT.md  BUFF_ZONE_V1_5_REPORT.md  BUFF_ZONE_V1_REPORT.md  DAMAGE_DEBUG_CALC_REPORT.md  DAPAN_ULT_ANALYSIS_REPORT.md  DATA_AUDIT_REPORT.md  E1-damage-stats-implementation.md  E1-damage-stats-mode-audit.md  (+123 more)
apps/tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-ui/src-tauri/src/: lib.rs  main.rs
(+538 files in other folders)
