[package]
name = "efbot"
version = "0.1.0"
description = "EFBot 战斗伤害模拟器"
authors = ["EFBot Team"]
edition = "2021"

[lib]
name = "efbot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
